chore: technical improvements based on review feedback