@@ -14,7 +14,6 @@ import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.validation.ConstraintViolationException;
 
@@ -24,41 +23,41 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler({MethodArgumentNotValidException.class, IllegalArgumentException.class, ConstraintViolationException.class})
     public ResponseEntity<Map<String, Object>> handleValidation(Exception ex, HttpServletRequest request) {
-        List<String> messages;
-        if (ex instanceof MethodArgumentNotValidException manv) {
-            messages = manv.getBindingResult().getAllErrors().stream()
-                    .map(error -> {
-                        if (error instanceof FieldError fe) {
-                            return fe.getField() + ": " + fe.getDefaultMessage();
-                        }
-                        return error.getDefaultMessage();
-                    })
-                    .collect(Collectors.toList());
-        } else if (ex instanceof ConstraintViolationException cve) {
-            messages = cve.getConstraintViolations().stream()
-                    .map(v -> v.getPropertyPath() + ": " + v.getMessage())
-                    .collect(Collectors.toList());
-        } else {
-            messages = List.of(ex.getMessage());
-        }
+        List<String> messages = switch (ex) {
+            case MethodArgumentNotValidException manv ->
+                    manv.getBindingResult().getAllErrors().stream()
+                            .map(error -> {
+                                if (error instanceof FieldError fe) {
+                                    return fe.getField() + ": " + fe.getDefaultMessage();
+                                }
+                                return error.getDefaultMessage();
+                            })
+                            .toList();
+            case ConstraintViolationException cve ->
+                    cve.getConstraintViolations().stream()
+                            .map(v -> v.getPropertyPath() + ": " + v.getMessage())
+                            .toList();
+            default -> List.of(ex.getMessage());
+        };
         log.warn("validation error path={} messages={}", request.getRequestURI(), messages);
+        Map<String, Object> body = getBadRequestMessage(request);
+        body.put("messages", messages);
+        return ResponseEntity.badRequest().body(body);
+    }
+
+    private Map<String, Object> getBadRequestMessage(HttpServletRequest request) {
         Map<String, Object> body = new HashMap<>();
         body.put("timestamp", Instant.now().toString());
         body.put("status", HttpStatus.BAD_REQUEST.value());
         body.put("error", HttpStatus.BAD_REQUEST.getReasonPhrase());
         body.put("path", request.getRequestURI());
-        body.put("messages", messages);
-        return ResponseEntity.badRequest().body(body);
+        return body;
     }
 
     @ExceptionHandler(MissingServletRequestParameterException.class)
     public ResponseEntity<Map<String, Object>> handleMissingParam(MissingServletRequestParameterException ex, HttpServletRequest request) {
         log.warn("missing parameter path={} param={} message={}", request.getRequestURI(), ex.getParameterName(), ex.getMessage());
-        Map<String, Object> body = new HashMap<>();
-        body.put("timestamp", Instant.now().toString());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", HttpStatus.BAD_REQUEST.getReasonPhrase());
-        body.put("path", request.getRequestURI());
+        Map<String, Object> body = getBadRequestMessage(request);
         body.put("messages", List.of("Missing parameter: " + ex.getParameterName()));
         return ResponseEntity.badRequest().body(body);
     }
